# flux-cli

./: .env.example  .gitignore  30_DAY_PLAN.md  APP_BUILDING_GUIDE.md  ARCHITECTURE_REFACTOR.md  ARCHITECTURE_REVIEW.md  AUTOMATIC_SEMANTIC_SEARCH.md  AUTO_TODO_VERIFICATION.md  BEFORE_AFTER_COMPARISON.md  BUGFIXES.md  BUG_FIX_SPRINT.md  BYOK_SETTINGS_COMPLETE.md  COMMAND_REFERENCE.md  COMPLETION_SUMMARY.md  COMPREHENSIVE_PRODUCT_REVIEW.md  COMPREHENSIVE_TEST.md  CONTEXT_MENU_COMPLETE.md  CONVERSATION_MEMORY_COMPLETE.md  CONVERSATION_MEMORY_IMPROVEMENTS.md  CONVERSATION_RECOVERY.md  DAY_13_COMPLETE.md  DAY_20_COMPLETE.md  DAY_21_COMPLETE.md  DAY_22_COMPLETE.md  DAY_23_COMPLETE.md  DAY_24_COMPLETE.md  DEMO.md  DESKTOP_INTEGRATION.md  DESKTOP_UX_IMPROVEMENTS.md  DIFFERENTIATORS.md  DIFF_VIEWER.md  ELECTRON_TESTING_REPORT.md  ENHANCEMENTS.md  FINAL_SPRINT_SUMMARY.md  FINAL_STATUS.md  FIXES_NOV_4_2025.md  FIXES_SUMMARY.md  FLUX_REVIEW_SUMMARY.md  FLUX_SIMPLIFICATION_PLAN.md  FLUX_UPGRADE_ROADMAP.md  (+82 more)
benchmarks/: performance_test.py
docs/: AI-SAFETY-GUIDELINES.md  BUGFIX_PATH_HANDLING.md  CLEANUP_COMPLETE.md  CLI_INTEGRATION_COMPLETE.md  CLI_INTEGRATION_PLAN.md  COMPLETE.md  CRITICAL_ISSUES.md  DEBUG_ANALYSIS_MULTILINE_FIX.md  DEBUG_SYSTEM_SUMMARY.md  DEMO_RESULTS.md  DOCUMENTATION_STRUCTURE.md  DOC_AUDIT.md  ELECTRON_TASK.txt  FINAL_SUMMARY.md  FLUX_IMPROVEMENTS.md  FLUX_REIMAGINED.md  INVISIBLE_FLUX.md  LEARNINGS.md  MEMORY_SYSTEM.md  MULTILINE_INPUT_SOLUTION.md  MULTI_LINE_INPUT.md  OPTION_A_COMPLETE.md  ORCHESTRATION_COMPLETE.md  PHASE_1_COMPLETE.md  QUICKSTART.md  (+29 more)
(+283 files in other folders)
