[project]
name = "flux-cli"
version = "0.1.0"
description = "AI-powered development assistant with advanced code understanding"
authors = [{name = "Developer"}]
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "anthropic>=0.25.0",
    "openai>=1.0.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "tree-sitter>=0.20.0",
    "python-dotenv>=1.0.0",
    "gitpython>=3.1.0",
    "tiktoken>=0.5.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
flux = "flux.main:main"

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"
